WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35380
[Qt] Compilation fails when WTF_USE_ACCELERATED_COMPOSITING=0
https://bugs.webkit.org/show_bug.cgi?id=35380
Summary
[Qt] Compilation fails when WTF_USE_ACCELERATED_COMPOSITING=0
Jarkko Sakkinen
Reported
2010-02-25 05:10:41 PST
WebKit trunk compilation failes when WTF_USE_ACCELERATED_COMPOSITING is set to zero. I resolved this issue by doing the following change: ########################################################################################################### diff --git a/WebCore/css/MediaQueryEvaluator.cpp b/WebCore/css/MediaQueryEvaluator.cpp index 4963ed4..6864231 100644 --- a/WebCore/css/MediaQueryEvaluator.cpp +++ b/WebCore/css/MediaQueryEvaluator.cpp @@ -47,7 +47,7 @@ #include "PlatformScreen.h" #include <wtf/HashMap.h> -#if ENABLE(3D_RENDERING) +#if ENABLE(3D_RENDERING) && USE(ACCELERATED_COMPOSITING) #include "RenderLayerCompositor.h" #endif @@ -472,10 +472,12 @@ static bool transform_3dMediaFeatureEval(CSSValue* value, RenderStyle*, Frame* f bool returnValueIfNoParameter; int have3dRendering; -#if ENABLE(3D_RENDERING) +#if ENABLE(3D_RENDERING) bool threeDEnabled = false; +#if USE(ACCELERATED_COMPOSITING) if (RenderView* view = frame->contentRenderer()) threeDEnabled = view->compositor()->hasAcceleratedCompositing(); +#endif returnValueIfNoParameter = threeDEnabled; have3dRendering = threeDEnabled ? 1 : 0; ###########################################################################################################
Attachments
Fix suggestion
(924 bytes, patch)
2010-02-25 05:13 PST
,
Jarkko Sakkinen
kenneth
: review-
Details
Formatted Diff
Diff
Compilation fix to MediaQuerySelector.cpp when WTF_USE_ACCELERATED_COMPOSITING=0
(1.31 KB, patch)
2010-02-25 05:45 PST
,
Jarkko Sakkinen
kenneth
: review+
kenneth
: commit-queue+
Details
Formatted Diff
Diff
Same fix, added missing bug URL.
(1.35 KB, patch)
2010-02-26 01:12 PST
,
Jarkko Sakkinen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jarkko Sakkinen
Comment 1
2010-02-25 05:13:03 PST
Created
attachment 49478
[details]
Fix suggestion Quickly done fix for the issue.
Kenneth Rohde Christiansen
Comment 2
2010-02-25 05:15:06 PST
Comment on
attachment 49478
[details]
Fix suggestion Looks OK to me, but needs a ChangeLog
Jarkko Sakkinen
Comment 3
2010-02-25 05:45:24 PST
Created
attachment 49480
[details]
Compilation fix to MediaQuerySelector.cpp when WTF_USE_ACCELERATED_COMPOSITING=0
Jarkko Sakkinen
Comment 4
2010-02-26 01:12:43 PST
Created
attachment 49574
[details]
Same fix, added missing bug URL.
WebKit Commit Bot
Comment 5
2010-02-26 12:59:15 PST
Comment on
attachment 49574
[details]
Same fix, added missing bug URL. Clearing flags on attachment: 49574 Committed
r55303
: <
http://trac.webkit.org/changeset/55303
>
WebKit Commit Bot
Comment 6
2010-02-26 12:59:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug