2010-02-26  Jarkko Sakkinen  <jarkko.sakkinen@tieto.com>

Reviewed by Kenneth Rohde Christiansen.

         https://bugs.webkit.org/show_bug.cgi?id=35380
         Fixed compilation error when WTF_USE_ACCELERATED_COMPOSITING=0

         * css/MediaQueryEvaluator.cpp:
         (WebCore::transform_3dMediaFeatureEval):

git-svn-id: svn://svn.chromium.org/blink/trunk@55303 bbb929c8-8fbe-4397-9dbb-9b2b20218538